--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Bella Medicial Spa
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A medispa in dover delaware. Just write something and I'll change this.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://bella-medi-spa.github.io/website/" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jekyll
 
