--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Bella Medicial Spa
+title: Bella Medispa
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A medispa in dover delaware. Just write something and I'll change this.
