--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Bella Medispa
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A medispa in dover delaware. Just write something and I'll change this.
-baseurl: "/website" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jekyll
 
